<resources>
    <string name="daftar">Daftar</string>
    <string name="sudahpunyakun">Sudah punya Akun?</string>
    <string name="login">Login</string>
    <string name="app_name">Korlap</string>
    <string name="belumpunyaakun">Belum Punya Akun?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="maps">Maps Collector</string>
    <string name="logout">Logout</string>
    <string name="history">History Penarikan</string>
    <string name="totaldaftartag">Total Daftar Penagihan</string>
    <string name="totaldaftarsur">Total Daftar Survey</string>
    <string name="daftardebt">Daftar Collector</string>
    <string name="edit">edit</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="password">Password</string>
    <string name="status">Status</string>
    <string name="nama">Nama</string>
    <string name="no">No</string>
    <string name="details">Details</string>
    <string name="detailklien">Detail Klien</string>
    <string name="alamat">Alamat</string>
    <string name="nohp">No HP</string>
    <string name="alamatkantor">Alamat Kantor</string>
    <string name="telpkantor">Telp Kantor</string>
    <string name="simpan">Simpan</string>
    <string name="clientnotes">Client Notes</string>
    <string name="saldo">Saldo</string>
    <string name="tarik_dana">Tarik Dana</string>
    <string name="tarik">Tarik</string>
    <string name="daftarsurvey">Daftar Survey</string>
    <string name="notes">Notes</string>
    <string name="title_activity_maps">Map</string>
    <string name="listcol">List Collector</string>
    <string name="jmlcol">Jml Collect</string>
    <string name="jmlsur">Jml Survey</string>
    <string name="tanggal">Tanggal</string>
    <string name="nominal">Nominal</string>
    <string name="detailcol">Detail Collector</string>
    <string name="col">Collector</string>
    <string name="sur">Survey</string>
    <string name="janjibayar">Janji Bayar</string>
    <string name="batal">Batal</string>
    <string name="mapss">Maps</string>
    <string name="historys">History</string>
</resources>
