<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/no" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/etNama"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nama" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/etStatus"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/status" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/etJanjiBayar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/blue"
            android:text="@string/details" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>