<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/etNumber"
            android:textStyle="bold"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/no" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/etNama"
            android:textStyle="bold"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nama" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/etJmlCol"
            android:textStyle="bold"
            android:layout_width="70dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/jmlcol" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/etJmlSur"
            android:textStyle="bold"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/jmlsur"
            android:gravity="center"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/etDetails"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/details"
            android:textColor="@color/blue"
            android:gravity="center"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>