<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.piramidsoft.korlap.menus.ListCollector">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:scaleType="fitXY"
            android:src="@drawable/headeratas" />

        <TextView
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listcol" />
    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/no" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:textStyle="bold"
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/nama" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:textStyle="bold"
                    android:layout_width="70dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/jmlcol" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:textStyle="bold"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/jmlsur"
                    android:gravity="center"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/details"
                    android:gravity="center"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/Swipe"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/linear">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvListCollector"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>
            </android.support.v4.widget.SwipeRefreshLayout>

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>
