<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.piramidsoft.korlap.menus.DetailClientPenagihan">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:scaleType="fitXY"
            android:src="@drawable/headeratas" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:paddingBottom="5dp"
            android:text="@string/detailklien"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/ImgKtp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:text="@string/nama"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etNama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="20dp"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:text="@string/alamat"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etAlamat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="20dp"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:text="@string/nohp"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etNoHP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="20dp"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:text="@string/alamatkantor"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etAlamatKantor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="20dp"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:text="@string/telpkantor"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etTelpKantor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="20dp"
                android:textColor="@color/hitamFont"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/linearLayout">

            <Spinner
                android:id="@+id/spinCol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>
        </LinearLayout>

        <Button
            android:id="@+id/btSimpan"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ripple_effect_biru"
            android:text="@string/simpan"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:padding="10dp"/>
    </RelativeLayout>
</LinearLayout>
